JUnit test updated