@@ -4,14 +4,17 @@ import app.entities.products.materials.planks.Beam;
 import app.entities.products.materials.planks.Fascia;
 import app.entities.products.materials.planks.Post;
 import app.entities.products.materials.planks.Rafter;
-import app.entities.products.materials.roof.RoofCover;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
 public class TestPlankFactory {
 
-    public static List<Integer> preCutsLengths = Arrays.asList(300, 330, 360, 390, 420, 450, 480, 510, 540, 570, 600);
+    public static List<Integer> PRE_CUT_LENGTHS = new ArrayList<>(Arrays.asList(300, 330, 360, 390, 420, 450, 480, 510, 540, 570, 600));
+    public static final List<Integer> SHORT_PRE_CUTS_LENGTHS = List.of(300, 330, 360, 390);
+    public static final List<Integer> LONG_PRE_CUTS_LENGTHS = List.of(300, 330, 360, 390, 400, 700);
+
 
     public static Post createStandardPost() {
         return new Post(
@@ -20,7 +23,7 @@ public class TestPlankFactory {
                 "Basic post for structural testing",
                 100.0,
                 150,
-                preCutsLengths,
+                PRE_CUT_LENGTHS,
                 "pcs",
                 25,
                 25,
@@ -35,7 +38,7 @@ public class TestPlankFactory {
                 "Basic beam for testing",
                 120.0,
                 180.0,
-                preCutsLengths,
+                PRE_CUT_LENGTHS,
                 "pcs",
                 25,
                 25,
@@ -43,15 +46,14 @@ public class TestPlankFactory {
         );
     }
 
-    public static Beam createShorterBeam() {
-        preCutsLengths.removeIf(n -> n > 400);
+    public static Beam createShorterGapBeam() {
         return new Beam(
                 2,
                 "Shorter Beam",
-                "Shorter max distance beam",
+                "Shorter max gap beam",
                 120.0,
                 180.0,
-                preCutsLengths,
+                PRE_CUT_LENGTHS,
                 "pcs",
                 25,
                 25,
@@ -59,15 +61,14 @@ public class TestPlankFactory {
         );
     }
 
-    public static Beam createLongerBeam() {
-        preCutsLengths.add(700);
+    public static Beam createLongerGapBeam() {
         return new Beam(
                 2,
                 "Longer Beam",
                 "Longer max distance beam",
                 120.0,
                 180.0,
-                preCutsLengths,
+                LONG_PRE_CUTS_LENGTHS,
                 "pcs",
                 25,
                 25,
@@ -82,7 +83,7 @@ public class TestPlankFactory {
                 "Basic rafter for testing",
                 110.0,
                 160.0,
-                preCutsLengths,
+                PRE_CUT_LENGTHS,
                 "pcs",
                 25,
                 25
@@ -90,14 +91,13 @@ public class TestPlankFactory {
     }
 
     public static Rafter createShorterRafter() {
-        preCutsLengths.removeIf(n -> n > 400);
         return new Rafter(
                 3,
                 "Shorter Rafter",
                 "Shorter max length rafter",
                 110.0,
                 160.0,
-                preCutsLengths,
+                SHORT_PRE_CUTS_LENGTHS,
                 "pcs",
                 25,
                 25
@@ -105,14 +105,13 @@ public class TestPlankFactory {
     }
 
     public static Rafter createLongerRafter() {
-        preCutsLengths.add(700);
         return new Rafter(
                 3,
                 "Longer Rafter",
                 "Longer max length rafter",
                 110.0,
                 160.0,
-                preCutsLengths,
+                LONG_PRE_CUTS_LENGTHS,
                 "pcs",
                 25,
                 25
@@ -126,7 +125,7 @@ public class TestPlankFactory {
                 "Basic fascia board for testing",
                 80.0,
                 130.0,
-                preCutsLengths,
+                PRE_CUT_LENGTHS,
                 "pcs",
                 25,
                 25
